# codespy-agent

./: build_graph.py  deployment_script.sh  docker-compose.yml  extract_data.py  main.py  pyproject.toml
cpp_calculator/: CMakeLists.txt  README.md  build.ps1
cpp_calculator/include/: Calculator.h  MathUtils.h
cpp_calculator/src/: Calculator.cpp  MathUtils.cpp  main.cpp
